--- a/blocks/form/__input-container/form__input-container.css
+++ b/blocks/form/__input-container/form__input-container.css
@@ -1,5 +1,6 @@
 .form__input-container {
-  width: 358px;
+  max-width: 358px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 0 48px 0;
   border: 0;
