--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,11 @@
 .popup__container {
-  height: min-content;
-  width: 430px;
+  min-height: 322px;
+  max-width: 430px;
+  width: 100%;
   background-color: #fff;
   border-radius: 10px;
   position: relative;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 564px) {
