--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,6 +9,7 @@
   background-size: 22px 22px;
   background-position: center;
   cursor: pointer;
+  padding: 0;
 }
 
 @media screen and (max-width: 740px) {
