--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,4 +8,14 @@
   background-size: 10px 10px;
   background-position: center;
   cursor: pointer;
+  padding: 0;
+  display: inline-block;
+}
+
+@media screen and (max-width: 540px) {
+  .profile__edit-button {
+    min-width: 18px;
+    height: 18px;
+    background-size: 7.5px 7.5px;
+  }
 }
