--- a/blocks/form/__button-container/form__button-container.css
+++ b/blocks/form/__button-container/form__button-container.css
@@ -1,11 +1,12 @@
 .form__button-container {
-  margin: 0 0 37px;
+  margin: 0 36px 37px;
   padding: 0;
   border: 0;
+  justify-content: center;
 }
 
 @media screen and (max-width: 450px) {
   .form__button-container {
-    margin: 0 0 25px;
+    margin: 0 22px 25px;
   }
 }
