--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -1,14 +1,15 @@
 .form__button {
-  width: 358px;
+  width: 100%;
   height: 50px;
   font-size: 18px;
-  border: 0;
+  border: none;
   cursor: pointer;
   color: #fff;
   background-color: #000;
   font-family: inherit;
-  display: flex;
-  margin: 0 auto;
+  text-align: center;
+  padding: 0;
+  border-radius: 2px;
 }
 
 .form__button:hover {
@@ -17,7 +18,6 @@
 
 @media screen and (max-width: 450px) {
   .form__button {
-    width: calc(100% - 44px);
     height: 46px;
     font-size: 14px;
   }
