--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 30px;
   box-sizing: border-box;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background-color: transparent;
   font-weight: 400;
   font-size: 14px;
