--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,7 +2,7 @@
   width: 32px;
   height: 32px;
   background-color: transparent;
-  background-image: url(../../../images/Close\ Icon.png);
+  background-image: url(../../../images/Close_Icon.png);
   background-repeat: no-repeat;
   background-size: 32px 32px;
   background-position: center;
