--- a/blocks/profile/__first-line/profile__first-line.css
+++ b/blocks/profile/__first-line/profile__first-line.css
@@ -1,12 +1,16 @@
 .profile__first-line {
   display: flex;
-  gap: 18px;
   box-sizing: border-box;
   align-items: center;
+  flex-wrap: wrap;
+  max-width: 336px;
+  align-self: center;
+  margin-left: 30px;
 }
 
-@media screen and (max-width: 519px) {
+@media screen and (max-width: 540px) {
   .profile__first-line {
-    gap: 10px;
+    margin: 26px auto 0;
+    justify-content: center;
   }
 }
