--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,12 @@
 .profile__info {
-  max-width: 336px;  
+  display: flex;
+  max-width: 486px;
+  flex-wrap: wrap; 
+}
+
+@media screen and (max-width: 540px) {
+  .profile__info {
+    flex-direction: column;
+    margin: 0 auto;
+  }
 }
