--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,4 +1,9 @@
 .card__image {
   border-radius: 10px 10px 0 0;
   max-width: 100%;
+  width: 282px;
+  height: 282px;
+  object-fit: cover;
+  object-position: center;
+  cursor: zoom-in;
 }
