--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,8 @@
 .popup {
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.4s, opacity 0.4s linear;
   position: fixed;
   min-height: 100vh;
   width: 100%;
@@ -7,4 +10,5 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
