--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,10 @@
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__button-container/form__button-container.css);
 @import url(../blocks/form/__button/form__button.css);
+@import url(../blocks/form/__button/_inactive/form__button_inactive.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_active/form__input-error_active.css);
+@import url(../blocks/form/__input-red/form__input-red.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__title/popup__title.css);
