--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,4 @@
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__zoom-image/popup__zoom-image.css);
