--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -6,4 +6,7 @@
   object-fit: cover;
   object-position: center;
   cursor: zoom-in;
+  background-color: #000;
+  color: #fff;
+  display: block;
 }
